fix issues with the base component

--- a/src/aura/baseCSV/baseCSV.cmp
+++ b/src/aura/baseCSV/baseCSV.cmp
@@ -2,5 +2,7 @@
     <aura:attribute name="rows" type="Object[]" access="public" description="The data rows from the parser"/>
     <aura:attribute name="headers" type="String[]" access="public" description="The header row from the parser"/>
 
-    <ltng:require scripts="{!$Resource.papaparse}"/>
+    <ltng:require scripts="{!$Resource.papaparse}"/> 
+    
+    {!v.body}
 </aura:component>
